# OpenEnv

./: .env.example  .flake8  .gitattributes  .gitignore  AUTOENV_IMPLEMENTATION.md  CLAUDE.md  COMPLETE_IMPLEMENTATION.md  CONTAINERS_RESTRUCTURE.md  CONTRIBUTING.md  LINTING_FIXES.md  Makefile  PODMAN_SOLUTION.md  README.md  SUMO_RL_INTEGRATION_PLAN.md  SUMO_RL_RISK_ANALYSIS.md  TESTING.md  example.py  fix_notebook.py  grpo.py  harmonic_reasoner_dataset_structured.jsonl  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  reward_function.py  run_wildfire_docker.sh  test_browsergym_manual.py  test_custom_port.py  test_docker_host_network.py  test_log  test_openenv.py  test_unified.py
envs/browsergym_env/: README.md  client.py  models.py  openenv.yaml  pyproject.toml
envs/browsergym_env/server/: Dockerfile  __init__.py  app.py  browsergym_environment.py  requirements.txt  start.sh  web_interface_patch.py
envs/calendar_env/: Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scenario_config.json
envs/calendar_env/client_notebooks/: OpenEnv_and_mcp_Single_Gym_Client_Meta_Turing.ipynb
envs/calendar_env/mcp_databases/: seed_store.db
envs/calendar_env/server/: Dockerfile  __init__.py  app.py  calendar_environment.py  google_calendar_apis.csv  main.py
envs/dm_control_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/dm_control_env/examples/: __init__.py  cartpole_control.py  hopper_control.py  list_environments.py  quadruped_control.py
envs/dm_control_env/server/: Dockerfile  __init__.py  app.py  dm_control_environment.py
envs/echo_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/echo_env/server/: Dockerfile  __init__.py  app.py  echo_environment.py  mcp_server.py
envs/finqa_env/: README.md  __init__.py  client.py  download_data.sh  models.py  openenv.yaml  pyproject.toml
envs/finqa_env/server/: Dockerfile  __init__.py  app.py  finqa_environment.py  rewards.py  tools.py
envs/grid_world_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  test_grid_world.sh
envs/grid_world_env/server/: Dockerfile  __init__.py  app.py  grid_world_environment.py  requirements.txt
envs/julia_env/: .dockerignore  README.md  __init__.py  client.py  julia_env_client.py  models.py  openenv.yaml  pyproject.toml  setup.py
envs/julia_env/.claude/: settings.local.json
envs/julia_env/server/: Dockerfile  __init__.py  app.py  julia_codeact_env.py  julia_executor.py  julia_process_pool.py  julia_repl_worker.jl  julia_transforms.py  requirements.txt
envs/kernrl/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/kernrl/server/: Dockerfile  __init__.py  app.py  evaluator.py  kernel_env.py  kernrl_environment.py  profiler.py
envs/maze_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/maze_env/server/: Dockerfile  __init__.py  app.py  maze.py  maze_env_environment.py  requirements.txt
envs/openapp_env/: .gitignore  README.md  __init__.py  client.py  example_usage.py  models.py  openenv.yaml  pyproject.toml  test_openapp_env.py
envs/openapp_env/assets/: demo-showcase.html
envs/openapp_env/server/: Dockerfile  __init__.py  app.py  openapp_environment.py  start.sh
envs/openspiel_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  test_docker_all_games.sh
envs/openspiel_env/server/: Dockerfile  Dockerfile.openspiel-base  app.py  build_docker.sh  openspiel_environment.py  prepare_hf.sh
envs/repl_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  prompts.py  pyproject.toml
envs/repl_env/server/: Dockerfile  __init__.py  app.py  python_executor.py  repl_environment.py
envs/snake_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/snake_env/server/: Dockerfile  Dockerfile.backup  __init__.py  requirements.txt  snake_environment.py
envs/tbench2_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/tbench2_env/server/: Dockerfile  __init__.py  app.py  tbench2_env_environment.py
envs/textarena_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  rewards.py
envs/textarena_env/server/: Dockerfile  __init__.py  app.py  environment.py  gradio_ui.py
envs/unity_env/: .gitignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/unity_env/server/: Dockerfile  __init__.py  app.py  unity_environment.py
envs/websearch_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/websearch_env/server/: Dockerfile  __init__.py  app.py  web_search_environment.py
envs/wildfire_env/: README.md  __init__.py  client.py  http_env_client_compat.py  models.py  openenv.yaml  pyproject.toml
envs/wildfire_env/server/: Dockerfile  __init__.py  app.py  wildfire_environment.py  wildfire_web_interface.py
src/: __init__.py  environment.py  interfaces.py  mcp.py  pyproject.toml  test.ipynb  transforms.py  types.py
src/.ipynb_checkpoints/: test-checkpoint.ipynb
src/core/: README.md  __init__.py  base.py  base_env_client.py  http_env_client.py  local_docker.py  pyproject.toml  types.py
src/core/containers/: __init__.py  test_local_docker_provider.py
src/core/docker/: __init__.py  docker_executor.py
src/core/env/: __init__.py  types.py
src/core/env_server/: __init__.py  base_transforms.py  code_execution_environment.py  http_server.py  interfaces.py  route_config.py  types.py  web_interface.py
src/core/old/: local_python_executor.py
src/core/tools/: __init__.py  git_server_client.py  julia_executor.py  julia_process_pool.py  local_julia_executor.py  local_python_executor.py
src/envs/: .discovery_cache.json  README.md  __init__.py  _discovery.py  _manifest.py  _registry.py  auto_action.py  auto_env.py
src/openenv/: __init__.py
src/openenv_cli/: __init__.py  __main__.py  _cli_utils.py  _validation.py
src/openenv_core/: __init__.py
(+759 files in other folders)
