[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-finqa-env"
version = "0.1.0"
description = "FinQA Environment for OpenEnv - financial question-answering on SEC 10-K filing data"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv dependencies (required for server functionality)
    "openenv-core[core]>=0.2.1",
    "fastapi>=0.115.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    # FinQA environment specific dependencies
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "finqa_env.server.app:main"

[tool.setuptools]
packages = ["finqa_env", "finqa_env.server"]
package-dir = { "finqa_env" = ".", "finqa_env.server" = "server" }

