[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-julia_env"
version = "0.1.0"
description = "Julia code execution environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv[core]>=0.2.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["julia_env"]
package-dir = { "" = "." }

[tool.setuptools.package-data]
"julia_env" = ["**/*.yaml", "**/*.yml"]
