# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-julia_env"
version = "0.1.0"
description = "Julia Environment for OpenEnv - Julia code execution with test tracking and reward calculation"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git@main",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "julia_env.server.app:main"


[tool.setuptools]
packages = ["julia_env", "julia_env.server"]
package-dir = { "julia_env" = ".", "julia_env.server" = "server" }

[tool.setuptools.package-data]
julia_env = ["**/*.yaml", "**/*.yml"]
