[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-kernrl"
version = "0.1.0"
description = "GPU kernel optimization environment for OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "torch>=2.0.0",
    "triton>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "kernrl.server.app:main"

[tool.setuptools]
packages = ["kernrl", "kernrl.server"]
package-dir = { "kernrl" = ".", "kernrl.server" = "server" }

[tool.setuptools.package-data]
kernrl = ["**/*.yaml", "**/*.yml", "problems/**/*.py"]
