# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-kernrl"
version = "0.1.0"
description = "GPU kernel optimization environment for OpenEnv - trains LLMs to write fast CUDA/Triton kernels"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv dependencies (required for server functionality)
    "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git@main",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    # GPU kernel evaluation dependencies
    "torch>=2.0.0",
    "triton>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m kernrl.server.app
server = "kernrl.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["kernrl", "kernrl.server"]
package-dir = { "kernrl" = ".", "kernrl.server" = "server" }

[tool.setuptools.package-data]
kernrl = ["**/*.yaml", "**/*.yml", "problems/**/*.py"]
