# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-maze_env"
version = "0.1.0"
description = "Maze Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git@main",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    "numpy>=1.19.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m maze_env.server.app
server = "maze_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["maze_env", "maze_env.server"]
package-dir = { "maze_env" = ".", "maze_env.server" = "server" }
