# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-snake-env"
version = "0.1.0"
description = "Snake Environment for OpenEnv - multi-agent snake game based on marlenv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv dependencies (required for server functionality)
    "openenv-core[core]>=0.2.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    # Snake environment specific dependencies
    "marlenv>=1.0.0",  # Multi-agent snake game environment
    "gym==0.24.1",  # Required by marlenv
    "numpy>=1.24.0",
    "Pillow>=10.0.0",  # Required by marlenv for image rendering
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "snake_env.server.app:main"

[tool.setuptools]
packages = ["snake_env", "snake_env.server"]
package-dir = { "snake_env" = ".", "snake_env.server" = "server" }
