# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-unity-env"
version = "0.1.0"
description = "Unity ML-Agents Environment for OpenEnv - wraps Unity environments like PushBlock, 3DBall, GridWorld"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv dependencies (installed from git for latest features)
    "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    # Unity ML-Agents dependencies (installed from source for latest features)
    "mlagents-envs @ git+https://github.com/Unity-Technologies/ml-agents.git#subdirectory=ml-agents-envs",
    # "mlagents @ git+https://github.com/Unity-Technologies/ml-agents.git#subdirectory=ml-agents",
    "numpy>=1.20.0",
    # Optional: for visual observations
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m unity_env.server.app
server = "unity_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["unity_env", "unity_env.server"]
package-dir = { "unity_env" = ".", "unity_env.server" = "server" }
