[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-wildfire-env"
version = "0.1.0"
description = "Wildfire Environment for OpenEnv - autonomous wildfire-control simulation for reinforcement learning"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.scripts]
server = "wildfire_env.server.app:main"


[tool.setuptools]
packages = ["wildfire_env", "wildfire_env.server"]
package-dir = {"wildfire_env" = ".", "wildfire_env.server" = "server"}

