[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-__ENV_NAME__"
version = "0.1.0"
description = "__ENV_TITLE_NAME__ environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv dependencies
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    # Add your environment-specific dependencies here
    # Example:
    # "numpy",
    # "torch",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "envs.__ENV_NAME___env.server.app:main"

[tool.setuptools]
package-dir = {"" = "../.."}

[tool.setuptools.packages.find]
where = ["../.."]
include = ["envs.__ENV_NAME___env*", "core*"]

[tool.setuptools.package-data]
"*" = ["**/*.yaml", "**/*.yml"]

